k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: mlops-ingress
  namespace: mlops-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /fastapi(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fastapi
                port: 
                  number: 8000
          - path: /mlflow(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service: 
                name: mlflow
                port: 
                  number: 5001
          - path: /grafana(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service: 
                name: grafana
                port: 
                  number: 3000
          - path: /prometheus(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service: 
                name: prometheus
                port: 
                  number: 9090
